--- a/project/Lesson3/css/style.css
+++ b/project/Lesson3/css/style.css
@@ -94,9 +94,9 @@ body {
 	color: black;	
 	background-color: #e1e1e1;
 }
-.copypast { 
-
-	padding-left: 750px;
+.copypast {
+	position: absolute;
+	right: 0;
 }
 .B_m:hover {
 	text-decoration: underline;
