--- a/project/Lesson3/css/style.css
+++ b/project/Lesson3/css/style.css
@@ -95,10 +95,14 @@ body {
 	background-color: #e1e1e1;
 }
 .copypast {
+	font-size:14.67px; /* Не забываем восстановить нормальные значения */
+	line-height:normal;
+	letter-spacing:normal;
 	position: absolute;
 	right: 0;
-	width: 300px;
-	height: 40px;
+	display:inline;
+	padding: 12px 24px;
+	background-color: #e1e1e1;
 }
 .B_m:hover {
 	text-decoration: underline;
