--- a/project/Lesson3/css/style.css
+++ b/project/Lesson3/css/style.css
@@ -99,7 +99,7 @@ body {
 	line-height:normal;
 	letter-spacing:normal;
 	position: absolute;
-	right: 48;
+	right: 48px;
 	padding: 12px 24px;
 	background-color: #e1e1e1;
 }
