--- a/project/Lesson3/css/style.css
+++ b/project/Lesson3/css/style.css
@@ -98,9 +98,8 @@ body {
 	font-size:14.67px; /* Не забываем восстановить нормальные значения */
 	line-height:normal;
 	letter-spacing:normal;
-	display:inline;
-	position: absolute;
-	right: 188px;
+	display: table;
+	float: left;
 	padding: 12px 24px;
 	background-color: #e1e1e1;
 }
