--- a/project/Lesson3/css/style.css
+++ b/project/Lesson3/css/style.css
@@ -78,7 +78,8 @@ body {
 	font-size:0; /* убираем горизонтальные отступы */
 	line-height:0;  /*...и вертикальные в некоторых браузерах */
 	letter-spacing:-1px; /* переубеждаем webkit'ы */
-	margin: 40px 46px 120px 46px;	
+	margin: 40px 46px 120px 46px;
+	height: 44px;
 	background-color: #e1e1e1;	
 }
 .B_m {
