--- a/project/Lesson4/css/style.css
+++ b/project/Lesson4/css/style.css
@@ -2,16 +2,154 @@
 	margin: 0;
 	padding: 0;	
 }
+
+a img { border: none; }
+
+.arrow{ 
+	padding-top: 5px;
+	border-top: 5px solid black; 
+	border-right:5px solid transparent; 
+	border-bottom:none; 
+	border-left:5px solid transparent; 
+	width:0px; height:14px; 
+}
+
 body{
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#128aa7), color-stop(9%,#128aa7), color-stop(9%,#207cca), color-stop(9%,#13cee1), color-stop(9%,#7db9e8), color-stop(29%,#ffffff), color-stop(29%,#40c6d3), color-stop(100%,#207cca), color-stop(100%,#2989d8), color-stop(100%,#0c739f)); /* Chrome,Safari4+ */
+	background: -webkit-gradient(linear, left top, left bottom, 
+	color-stop(0%,#128aa7), color-stop(3%,#128aa7), color-stop(3%,#13cee1), 
+	color-stop(18%,#ffffff), color-stop(18%,#40c6d3), 
+	color-stop(100%,#0c739f)); /* Chrome,Safari4+ */
 	background-repeat: no-repeat;
 	/*color: #ffffff;*/
 	height: 1021px;
 }
 .central{
+	width: 1000px;
 	height: 988px;
 	margin: 0px 151px 0px 128px;
-	background-color: #ffffff; 
-
+	background-color: #ffffff;
 	box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.75);
 }
+.logo{
+	float: left; /* выстраиваем элементы списка в один ряд */
+	padding-left: 28px;
+	padding-top: 11px;
+}
+.Contacts{
+	font-size:14px;
+	color: #5fa5bb;
+	float: right; /* выстраиваем элементы списка в один ряд */
+	padding-top: 11px;
+	padding-right: 34px;
+}
+.Country{
+	font-size: 10px;
+	clear: right;
+	list-style: none; /* прячем маркеры */
+	margin-right: 30px;
+	}
+.Country li {
+	float: right; /* выстраиваем элементы списка в один ряд */	
+}
+.Country li a {
+	display: block;
+	text-align: center;
+	padding-top: 33px; /* внутренний остту чтобы текст был вне фона */
+	background-position: center top; /* выравниваем фон вверх и по центру */
+	background-repeat: no-repeat;
+	width: 57px; /* размеры указываем чтобы картинки полностью отобразились */	
+}
+.img{
+	text-align: center;
+	clear: both;
+	background-size: 100%;	
+}
+.menu{
+
+}
+
+#primary_nav_wrap
+{
+	margin-top:15px
+}
+
+#primary_nav_wrap ul
+{
+	list-style:none;
+	position:relative;
+	float:left;
+	margin:0;
+	padding:0
+}
+
+#primary_nav_wrap ul a
+{
+	display:block;
+	color:#333;
+	text-decoration:none;
+	font-weight:700;
+	font-size:12px;
+	line-height:32px;
+	padding:0 15px;
+	font-family:"HelveticaNeue","Helvetica Neue",Helvetica,Arial,sans-serif
+}
+
+#primary_nav_wrap ul li
+{
+	position:relative;
+	float:left;
+	margin:0;
+	padding:0
+}
+
+#primary_nav_wrap ul li.current-menu-item
+{
+	background:#ddd
+}
+
+#primary_nav_wrap ul li:hover
+{
+	background:#f6f6f6
+}
+
+#primary_nav_wrap ul ul
+{
+	display:none;
+	position:absolute;
+	top:100%;
+	left:0;
+	background:#fff;
+	padding:0
+}
+
+#primary_nav_wrap ul ul li
+{
+	float:none;
+	width:200px
+}
+
+#primary_nav_wrap ul ul a
+{
+	line-height:120%;
+	padding:10px 15px
+}
+
+#primary_nav_wrap ul ul ul
+{
+	top:0;
+	left:100%
+}
+
+#primary_nav_wrap ul li:hover > ul
+{
+	display:block
+}
+
+
+.copyrights{
+	padding: 10px 0px;
+	text-align: center;
+	color: #dee7ee;
+	font-size: 12px;
+}
+
