--- a/project/Lesson4/css/style.css
+++ b/project/Lesson4/css/style.css
@@ -6,26 +6,24 @@
 a img { border: none; }
 
 .arrow{ 
-	padding-top: 5px;
 	border-top: 5px solid black; 
 	border-right:5px solid transparent; 
 	border-bottom:none; 
 	border-left:5px solid transparent; 
-	width:0px; height:14px; 
+	width:0px; height:0px; 
 }
 
 body{
 	background: -webkit-gradient(linear, left top, left bottom, 
 	color-stop(0%,#128aa7), color-stop(3%,#128aa7), color-stop(3%,#13cee1), 
-	color-stop(18%,#ffffff), color-stop(18%,#40c6d3), 
-	color-stop(100%,#0c739f)); /* Chrome,Safari4+ */
+	color-stop(18%,#ffffff), color-stop(18%,#40c6d3), color-stop(100%,#0c739f)); /* Chrome,Safari4+ */
 	background-repeat: no-repeat;
-	/*color: #ffffff;*/
 	height: 1021px;
+	font-family: Tahoma, Arial, sans-serif;
 }
 .central{
 	width: 1000px;
-	height: 988px;
+	height: 985px;
 	margin: 0px 151px 0px 128px;
 	background-color: #ffffff;
 	box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.75);
@@ -36,11 +34,15 @@ body{
 	padding-top: 11px;
 }
 .Contacts{
-	font-size:14px;
+	font-size: 14px;
 	color: #5fa5bb;
 	float: right; /* выстраиваем элементы списка в один ряд */
 	padding-top: 11px;
 	padding-right: 34px;
+}
+.Contacts a{
+	text-decoration: none;
+	color: #5fa5bb;
 }
 .Country{
 	font-size: 10px;
@@ -60,96 +62,143 @@ body{
 	width: 57px; /* размеры указываем чтобы картинки полностью отобразились */	
 }
 .img{
+	border-top: solid 1px #0c739f;	
 	text-align: center;
 	clear: both;
 	background-size: 100%;	
 }
+.clearfix:after {
+        content: "";
+        display: block;
+        clear: both;
+        height: 0;
+        width: 100%;
+}
 .menu{
-
+	font-size:14px;	
+	z-index:3;
+	position: relative;
+	margin-top: -2px;
+	border-top: solid 1px #40c6d3;
+	border-bottom: solid 1px black;
+	background: -webkit-linear-gradient(top,  #373737 0%,#303030 100%); / Chrome10-25,Safari5.1-6 /
+	box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.75);
 }
-
-#primary_nav_wrap
-{
-	margin-top:15px
-}
-
-#primary_nav_wrap ul
-{
-	list-style:none;
+.menu li{
+	z-index:3;
 	position:relative;
 	float:left;
-	margin:0;
-	padding:0
+	list-style: none;		
 }
-
-#primary_nav_wrap ul a
-{
-	display:block;
-	color:#333;
-	text-decoration:none;
-	font-weight:700;
-	font-size:12px;
-	line-height:32px;
-	padding:0 15px;
-	font-family:"HelveticaNeue","Helvetica Neue",Helvetica,Arial,sans-serif
+.menu ul{
+	z-index:3;
+	position: relative;
+	display:none;	
+	top: 100%;	
+	box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.75);	
 }
-
-#primary_nav_wrap ul li
-{
+.menu li a{
+	z-index:3;
 	position:relative;
-	float:left;
-	margin:0;
-	padding:0
+	color:#ffffff;
+	display:block;	
+	line-height:28px;
+	padding:0px 35px;
+	text-decoration:none;	
 }
-
-#primary_nav_wrap ul li.current-menu-item
-{
-	background:#ddd
+.menu li:hover ul{
+	margin-top: 1px;
+	z-index:3;	
+	position: absolute;
+	display:block;	
+	top: 100%;	
+	left: 23px;	
+	background: #373737;
+	box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.75);		
 }
-
-#primary_nav_wrap ul li:hover
-{
-	background:#f6f6f6
+.menu ul a{	
+	z-index:3;
+	padding:0px 10px;	
 }
-
-#primary_nav_wrap ul ul
-{
-	display:none;
-	position:absolute;
-	top:100%;
-	left:0;
-	background:#fff;
-	padding:0
+.menu ul+a:after {
+	z-index:3;
+	position: absolute;	
+	content: '';
+	color:#ffffff;
+	display: block;		
+	}
+.fon1 {  /* фон для левой колонки (серый) */
+	z-index:1;
+	height: 535px;
+	border-right: solid 2px #c7cacf;
+	width: 100%;
+	background: #edeef0;
+	float: right; /* делаем все обертки плавающими блоками чтобы избежать добавления блока с clear: both; */
+	position: relative; /* чтобы иметь возможность сместить фон */
+	right: 58%; /* обнажаем красный фон для центральной колонки. 60% - ширина центральной колонки */
 }
-
-#primary_nav_wrap ul ul li
-{
-	float:none;
-	width:200px
+.fon2 {/* фон для центральной колонки (белый) */
+	z-index:1;
+	border-right: solid 2px #c7cacf;	
+	width: 100%;
+	background: #ffffff;
+	float: left;
+	position: relative;
+	right: 21%; /* обнажаем желтый фон для правой колонки. 20% - ширина правой колонки */
 }
-
-#primary_nav_wrap ul ul a
-{
-	line-height:120%;
-	padding:10px 15px
+.fon3 {/* фон для правой колонки (серый) */
+	margin-top: 3px;
+	z-index:1;	
+	width: 100%;
+	background: #edeef0;
+	float: left;
+	position: relative;
+	overflow: hidden;
 }
-
-#primary_nav_wrap ul ul ul
-{
-	top:0;
-	left:100%
+.leftColumn {	 
+	width: 19%;
+	float: left;
+	/*overflow: hidden;  страховка от ломки верстки объектами шире размера колонки-родителя */
+	position:relative;
+	left:80%; /* возвращаем колонки с контентом на свои позиции. 80% - сумма смещений оберток fon1 и fon2 */	
 }
-
-#primary_nav_wrap ul li:hover > ul
-{
-	display:block
+.leftColumn p{
+	color: #424c43;
+	font-size:14px;
+	text-align: center;
+	padding: 5px 0px;
 }
-
-
+.rightColumn  p{
+	color: #424c43;
+	font-size:14px;
+	text-align: center;
+	padding: 5px 0px;
+}
+.centerColumn {	
+	width: 57%;
+	float: left;
+	overflow: hidden;
+	position:relative;
+	left:80%;
+	visibility: hidden;
+}
+.rightColumn {
+	color: #424c43;	
+	font-size:10px;
+	width: 23%;
+	float: left;
+	overflow: hidden;
+	position:relative;
+	left:81%;
+}
+#h2 {
+	padding: 10px 0px 5px 0px;
+	font-weight:bold;
+	font-size:18px;	
+}
 .copyrights{
 	padding: 10px 0px;
 	text-align: center;
 	color: #dee7ee;
 	font-size: 12px;
-}
 
