--- a/project/Lesson4/css/style.css
+++ b/project/Lesson4/css/style.css
@@ -74,6 +74,9 @@ body{
         height: 0;
         width: 100%;
 }
+ul{
+	box-shadow: -1px 6px 4px 0px rgba(0,0,0,0.75);	
+}
 .menu{
 	font-size:14px;	
 	z-index:3;
@@ -81,8 +84,7 @@ body{
 	margin-top: -2px;
 	border-top: solid 1px #40c6d3;
 	border-bottom: solid 1px black;
-	background: -webkit-linear-gradient(top,  #373737 0%,#303030 100%); / Chrome10-25,Safari5.1-6 /
-	box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.75);
+	background: -webkit-linear-gradient(top,  #373737 0%,#303030 100%); / Chrome10-25,Safari5.1-6 /	
 }
 .menu li{
 	z-index:3;
@@ -91,71 +93,67 @@ body{
 	float:left;
 	list-style: none;		
 }
-.menu ul{
-	z-index:3;
-	position: absolute;
-	display:none;	
-	top: 100%;	
-	box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.75);	
-}
+.menu ul+a:after {
+	z-index:4;
+	position: absolute;	
+	content: '';
+	display: block;	
+	top: 10px;
+	right: 10px;
+	height: 5px;
+	width: 6px;
+	background: url(../img/triangle-down.png) no-repeat center right; 
+	}
 .menu li a{
 	z-index:3;
-	position:relative;
-	color:#ffffff;
-	display:block;	
-	line-height:28px;
 	padding:0px 35px;
+	display:block;
+	line-height:28px;
+	color:#ffffff;
 	text-decoration:none;	
+	position:relative;	
+	font-size: 14px;	
 }
+.menu ul{
+	z-index:3;
+	position:absolute;
+	display:none;
+	top: 36px;
+	left: 23px;			
+}	
 .menu li:hover ul{
+	display:block;	
 	margin-top: 1px;
 	z-index:3;	
-	position: absolute;
-	display:block;	
+	position: absolute;	
 	top: 100%;	
 	left: 23px;	
-	background: #373737;
-	box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.75);		
-}
-
+	background: #373737;	
+}	
 .menu ul a{	
 	z-index:3;
 	padding:0px 10px;	
 }
-.menu ul+a:after {
-	z-index:3;
-	position: absolute;	
-	content: '';
-	color:#ffffff;
-	display: block;		
-	}
-.menu ul li {
-   position: absolute;
-   clear: both;
-   display: block;
-   float: left;
-   list-style: none; 
-  }
 .fon1 {  /* фон для левой колонки (серый) */
 	z-index:1;
 	height: 535px;
 	border-right: solid 2px #c7cacf;
 	width: 100%;
 	background: #edeef0;
-	float: right; /* делаем все обертки плавающими блоками чтобы избежать добавления блока с clear: both; */
+	float: right;  /*делаем все обертки плавающими блоками чтобы избежать добавления блока с clear: both; */
 	position: relative; /* чтобы иметь возможность сместить фон */
 	right: 58%; /* обнажаем красный фон для центральной колонки. 60% - ширина центральной колонки */
 }
-.fon2 {/* фон для центральной колонки (белый) */
+.fon2 { /*фон для центральной колонки (белый) */
 	z-index:1;
 	border-right: solid 2px #c7cacf;	
 	width: 100%;
 	background: #ffffff;
 	float: left;
 	position: relative;
-	right: 21%; /* обнажаем желтый фон для правой колонки. 20% - ширина правой колонки */
+	right: 21%;/*  обнажаем желтый фон для правой колонки. 20% - ширина правой колонки */
 }
-.fon3 {/* фон для правой колонки (серый) */
+.fon3 { /*фон для правой колонки (серый) */
 	margin-top: 3px;
 	z-index:1;	
 	width: 100%;
@@ -167,7 +165,7 @@ body{
 .leftColumn {	 
 	width: 19%;
 	float: left;
-	/*overflow: hidden;  страховка от ломки верстки объектами шире размера колонки-родителя */
+	overflow: hidden;  /*страховка от ломки верстки объектами шире размера колонки-родителя */
 	position:relative;
 	left:80%; /* возвращаем колонки с контентом на свои позиции. 80% - сумма смещений оберток fon1 и fon2 */	
 }
